# osiris-platform

./: AUTHORS  Cargo.toml  NEWS.md  README.md
.github/workflows/: gh-pages.yml  github-pages.yml  pages.yml  rust-tests.yml
lib/example-dioxus-counter/: Cargo.toml
lib/example-dioxus-counter/src/: main.rs
lib/example-makepad-counter/: Cargo.toml  osiris-platform.toml
lib/example-makepad-counter/platform/android/: build.gradle  gradle.properties  settings.gradle
lib/example-makepad-counter/platform/android/src/main/: AndroidManifest.xml
lib/example-makepad-counter/platform/android/src/main/res/values/: strings.xml  themes.xml
lib/example-makepad-counter/src/: lib.rs  main.rs
lib/example-makepad-counter/src/java/dev/makepad/android/: Makepad.java  MakepadActivity.java  MakepadSurfaceView.java
src/: cargo.rs  lib.rs  manifest.rs  util.rs
src/op/: build.rs  emerge.rs
src/platform/: android.rs
