[package]
name = "example-dioxus-counter"
publish = false
version = "0.1.0"

description = "UI Counter via Dioxus"
edition = "2021"
homepage = "https://www.osiris.foo"
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/osiris-apis/osiris-platform"
rust-version = "1.70"

[dependencies]
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
